@@ -1,4 +1,5 @@
 v3.7.0 (Unreleased)
+- Improvement: Added theme support for the Rank Math breadcrumb SEO schema.
 - Improvement: Rendered Addon dependent toggle code conditionally and removed unwanted code.
 - Fix: Changing Off-canvas flyout close button color not reflecting on frontend.
 - Fix: Broken layout WooCommerce Shop/Archive page on mobile view when using elementor template or Product archive widget.
